Lifecycle _validateWidget is skipped if _validateElements has warnings
If _validateElements returns only warnings, the _validateWidget is
skipped and the warning status is directly returned. This might be wrong
in case _validateWidget would return error status.

Now _validateWidget is only skipped if _validateElements has errors.
Furthermore, the message box can show all validation messages.

423378